add_library(meta INTERFACE)
target_link_libraries(meta INTERFACE ${RH_ENV_TARGET})

install(TARGETS meta
        EXPORT ${RH_EXPORT_PREFIX}meta${RH_EXPORT_SUFFIX}
        )

export(EXPORT ${RH_EXPORT_PREFIX}meta${RH_EXPORT_SUFFIX}
        NAMESPACE ${RH_EXPORT_NAMESPACE}
        FILE ${RH_BUILD_CMAKE_DIR}/${RH_EXPORT_PREFIX}meta${RH_EXPORT_SUFFIX}.cmake
        )
install(EXPORT ${RH_EXPORT_PREFIX}meta${RH_EXPORT_SUFFIX}
        DESTINATION ${RH_INSTALL_CMAKE_DIR}
        NAMESPACE ${RH_EXPORT_NAMESPACE}
        )
